# GlossaryGenerator

./: .gitignore  .gitmodules  .pdm-python  1984_glossary.txt  FOO_test.txt  FOO_test_dict.xlsx  GenDictFromWords.py  README.md  TODO.md  generator-scapy.py  generator.py  genxlsx_from_wordstxt.py  middleschool1600.txt  pdm.toml  pyproject.toml  readme.md  test.py  xx.py
books/: 1984.txt
dict/: middleschool1600.txt
