[project]
name = "GlossaryGenerator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sd44", email = "sd44sd44@yeah.net"},
]
dependencies = [
    "textract-py3>=2.1.0",
    "spacy>=3.8.3",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
